fix overflow behavior on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: top;
   min-width: 320px;
   min-height: 100vh;
+  width: 100%;
 }
 
 h1 {
